weather/build/log/idf_py_stdout_output_43699
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/jude/esp/weather/build/bootloader/esp-idf/esptool_py && /Users/jude/.espressif/python_env/idf5.1_py3.10_env/bin/python /Users/jude/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/jude/esp/weather/build/bootloader/bootloader.bin
Bootloader binary size 0x4ef0 bytes. 0x3110 bytes (38%) free.
[2/11] cd /Users/jude/esp/weather/build && /Users/jude/.espressif/python_env/idf5.1_py3.10_env/bin/python /Users/jude/esp/esp-idf/components/spiffs/spiffsgen.py 0xf0000 /Users/jude/esp/weather/font /Users/jude/esp/weather/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len
[3/11] No install step for 'bootloader'
[4/11] Completed 'bootloader'
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/jude/.espressif/tools/riscv32-esp-elf/esp-2022r1-11.2.0/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-1840-gaad600c9ca\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/jude/esp/weather/build/config -I/Users/jude/esp/weather/main -I/Users/jude/esp/esp-idf/components/newlib/platform_include -I/Users/jude/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/jude/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/jude/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/jude/esp/esp-idf/components/freertos/esp_additions/include -I/Users/jude/esp/esp-idf/components/esp_hw_support/include -I/Users/jude/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/jude/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/Users/jude/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/Users/jude/esp/esp-idf/components/esp_hw_support/port/esp32c3/private_include -I/Users/jude/esp/esp-idf/components/heap/include -I/Users/jude/esp/esp-idf/components/log/include -I/Users/jude/esp/esp-idf/components/soc/include -I/Users/jude/esp/esp-idf/components/soc/esp32c3/. -I/Users/jude/esp/esp-idf/components/soc/esp32c3/include -I/Users/jude/esp/esp-idf/components/hal/esp32c3/include -I/Users/jude/esp/esp-idf/components/hal/include -I/Users/jude/esp/esp-idf/components/hal/platform_port/include -I/Users/jude/esp/esp-idf/components/esp_rom/include -I/Users/jude/esp/esp-idf/components/esp_rom/include/esp32c3 -I/Users/jude/esp/esp-idf/components/esp_rom/esp32c3 -I/Users/jude/esp/esp-idf/components/esp_common/include -I/Users/jude/esp/esp-idf/components/esp_system/include -I/Users/jude/esp/esp-idf/components/esp_system/port/soc -I/Users/jude/esp/esp-idf/components/esp_system/port/include/riscv -I/Users/jude/esp/esp-idf/components/esp_system/port/include/private -I/Users/jude/esp/esp-idf/components/riscv/include -I/Users/jude/esp/esp-idf/components/lwip/include -I/Users/jude/esp/esp-idf/components/lwip/include/apps -I/Users/jude/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/jude/esp/esp-idf/components/lwip/lwip/src/include -I/Users/jude/esp/esp-idf/components/lwip/port/esp32/include -I/Users/jude/esp/esp-idf/components/lwip/port/esp32/include/arch -I/Users/jude/esp/esp-idf/components/esp_ringbuf/include -I/Users/jude/esp/esp-idf/components/efuse/include -I/Users/jude/esp/esp-idf/components/efuse/esp32c3/include -I/Users/jude/esp/esp-idf/components/driver/include -I/Users/jude/esp/esp-idf/components/driver/deprecated -I/Users/jude/esp/esp-idf/components/esp_pm/include -I/Users/jude/esp/esp-idf/components/mbedtls/port/include -I/Users/jude/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/jude/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/jude/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/jude/esp/esp-idf/components/esp_app_format/include -I/Users/jude/esp/esp-idf/components/bootloader_support/include -I/Users/jude/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/Users/jude/esp/esp-idf/components/esp_partition/include -I/Users/jude/esp/esp-idf/components/app_update/include -I/Users/jude/esp/esp-idf/components/spi_flash/include -I/Users/jude/esp/esp-idf/components/pthread/include -I/Users/jude/esp/esp-idf/components/esp_timer/include -I/Users/jude/esp/esp-idf/components/app_trace/include -I/Users/jude/esp/esp-idf/components/esp_event/include -I/Users/jude/esp/esp-idf/components/nvs_flash/include -I/Users/jude/esp/esp-idf/components/esp_phy/include -I/Users/jude/esp/esp-idf/components/esp_phy/esp32c3/include -I/Users/jude/esp/esp-idf/components/vfs/include -I/Users/jude/esp/esp-idf/components/esp_netif/include -I/Users/jude/esp/esp-idf/components/wpa_supplicant/include -I/Users/jude/esp/esp-idf/components/wpa_supplicant/port/include -I/Users/jude/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/Users/jude/esp/esp-idf/components/esp_wifi/include -I/Users/jude/esp/esp-idf/components/unity/include -I/Users/jude/esp/esp-idf/components/unity/unity/src -I/Users/jude/esp/esp-idf/components/cmock/CMock/src -I/Users/jude/esp/esp-idf/components/console -I/Users/jude/esp/esp-idf/components/http_parser -I/Users/jude/esp/esp-idf/components/esp-tls -I/Users/jude/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/jude/esp/esp-idf/components/esp_adc/include -I/Users/jude/esp/esp-idf/components/esp_adc/interface -I/Users/jude/esp/esp-idf/components/esp_adc/esp32c3/include -I/Users/jude/esp/esp-idf/components/esp_adc/deprecated/include -I/Users/jude/esp/esp-idf/components/esp_eth/include -I/Users/jude/esp/esp-idf/components/esp_gdbstub/include -I/Users/jude/esp/esp-idf/components/esp_gdbstub/riscv -I/Users/jude/esp/esp-idf/components/esp_gdbstub/esp32c3 -I/Users/jude/esp/esp-idf/components/esp_hid/include -I/Users/jude/esp/esp-idf/components/tcp_transport/include -I/Users/jude/esp/esp-idf/components/esp_http_client/include -I/Users/jude/esp/esp-idf/components/esp_http_server/include -I/Users/jude/esp/esp-idf/components/esp_https_ota/include -I/Users/jude/esp/esp-idf/components/esp_lcd/include -I/Users/jude/esp/esp-idf/components/esp_lcd/interface -I/Users/jude/esp/esp-idf/components/protobuf-c/protobuf-c -I/Users/jude/esp/esp-idf/components/protocomm/include/common -I/Users/jude/esp/esp-idf/components/protocomm/include/security -I/Users/jude/esp/esp-idf/components/protocomm/include/transports -I/Users/jude/esp/esp-idf/components/esp_local_ctrl/include -I/Users/jude/esp/esp-idf/components/esp_psram/include -I/Users/jude/esp/esp-idf/components/espcoredump/include -I/Users/jude/esp/esp-idf/components/espcoredump/include/port/riscv -I/Users/jude/esp/esp-idf/components/wear_levelling/include -I/Users/jude/esp/esp-idf/components/sdmmc/include -I/Users/jude/esp/esp-idf/components/fatfs/diskio -I/Users/jude/esp/esp-idf/components/fatfs/vfs -I/Users/jude/esp/esp-idf/components/fatfs/src -I/Users/jude/esp/esp-idf/components/idf_test/include -I/Users/jude/esp/esp-idf/components/idf_test/include/esp32c3 -I/Users/jude/esp/esp-idf/components/ieee802154/include -I/Users/jude/esp/esp-idf/components/json/cJSON -I/Users/jude/esp/esp-idf/components/mqtt/esp-mqtt/include -I/Users/jude/esp/esp-idf/components/spiffs/include -I/Users/jude/esp/esp-idf/components/wifi_provisioning/include -march=rv32imc  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=/Users/jude/esp/weather=. -fmacro-prefix-map=/Users/jude/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/jude/esp/weather/main/main.c
In file included from /Users/jude/esp/weather/main/pngle.h:30,
                 from /Users/jude/esp/weather/main/decode_png.h:4,
                 from /Users/jude/esp/weather/main/main.c:18:
/Users/jude/esp/esp-idf/components/esp_rom/include/esp32c3/rom/miniz.h:7:2: warning: #warning "{target}/rom/miniz.h is deprecated, please use (#include "miniz.h") instead" [-Wcpp]
    7 | #warning "{target}/rom/miniz.h is deprecated, please use (#include "miniz.h") instead"
      |  ^~~~~~~
/Users/jude/esp/weather/main/main.c: In function 'weather_system':
/Users/jude/esp/weather/main/main.c:56:9: error: too many arguments to function 'strcpy'
   56 |         strcpy((char *)ascii, "温度=%.2f℃\n湿度=%.2f%%\n", get_sht20_Temperature(), get_sht20_Humidity());
      |         ^~~~~~
In file included from /Users/jude/esp/weather/main/main.c:3:
/Users/jude/.espressif/tools/riscv32-esp-elf/esp-2022r1-11.2.0/riscv32-esp-elf/riscv32-esp-elf/sys-include/string.h:38:10: note: declared here
   38 | char    *strcpy (char *__restrict, const char *__restrict);
      |          ^~~~~~
ninja: build stopped: subcommand failed.
